# cursor-trail

./: .gitignore  Cargo.toml  README.md  build.rs  config.example.toml
src/: config.rs  cursor.rs  icon.rs  main.rs  math.rs  overlay.rs  pendulum.rs  render.rs  settings.rs  trail.rs  tray.rs
