[package]
name = "cursor-trail"
version = "0.1.0"
edition = "2021"
description = "Customizable cursor trail and hanging avatar overlay for Windows 11"
license = "MIT"

[build-dependencies]
ico = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
winres = "0.1"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
dirs = "5.0"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.29"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp"] }
muda = "0.15"
notify = "6.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
tray-icon = "0.19"
winit = { version = "0.30", default-features = false, features = ["rwh_06"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
codegen-units = 1
strip = true
